code/istio/lessee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biz-gateway-dp-prod
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: biz-gateway
      version: default
  replicas: 1
  template:
    metadata:
      labels:
        app: biz-gateway
        version: default
    spec:
      containers:
        - name: biz-gateway-ct-default
          image: catface996/spring-cloud-gateway-istio:lessee
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-dp-l1
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: cat
      version: L1
  replicas: 1
  template:
    metadata:
      labels:
        app: cat
        version: L1
    spec:
      containers:
        - name: cat-ct-l1
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-dp-l2
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: cat
      version: L2
  replicas: 1
  template:
    metadata:
      labels:
        app: cat
        version: L2
    spec:
      containers:
        - name: cat-ct-l2
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-dp-l3
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: cat
      version: L3
  replicas: 1
  template:
    metadata:
      labels:
        app: cat
        version: L3
    spec:
      containers:
        - name: cat-ct-l3
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-l1
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: dog
      version: L1
  replicas: 1
  template:
    metadata:
      labels:
        app: dog
        version: L1
    spec:
      containers:
        - name: dog-ct-l1
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-default
  annotations:
    author: catface996
spec:
  selector:
    matchLabels:
      app: dog
      version: default
  replicas: 1
  template:
    metadata:
      labels:
        app: dog
        version: default
    spec:
      containers:
        - name: dog-ct-default
          image: catface996/spring-cloud-istio-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1024Mi"
